--- a/infrastructure/admin-server/src/main/resources/application.properties
+++ b/infrastructure/admin-server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=${SERVER_PORT:8080}
 server.error.whitelabel.enabled=false
 #disabled: flyway,liquibase
 spring.boot.admin.routes.endpoints:env,metrics,trace,dump,jolokia,info,configprops,trace,logfile,refresh,heapdump,activiti
