configurable ports for docker-compose

--- a/infrastructure/admin-server/Dockerfile
+++ b/infrastructure/admin-server/Dockerfile
@@ -3,8 +3,9 @@ MAINTAINER Michael Mittermayr
 
 ENTRYPOINT ["/usr/bin/java", "-jar", "/usr/share/app.jar"]
 
-EXPOSE 8080
-
+ENV SERVER_PORT 8080
 ENV EUREKA_SERVICE_URL=http://eureka:8761
+
+EXPOSE $SERVER_PORT
 
 ADD target/admin-server.jar /usr/share/app.jar
