--- a/deployment-manager/deployment-manager-client/pom.xml
+++ b/deployment-manager/deployment-manager-client/pom.xml
@@ -3,28 +3,24 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>platform-parent</artifactId>
+        <artifactId>deployment-manager-parent</artifactId>
         <groupId>at.sintrum.fog</groupId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>platform-swagger</artifactId>
+    <artifactId>deployment-manager-client</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>at.sintrum.fog</groupId>
-            <artifactId>platform-core</artifactId>
+            <artifactId>platform-client-core</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
+            <groupId>at.sintrum.fog</groupId>
+            <artifactId>deployment-manager-api</artifactId>
         </dependency>
     </dependencies>
 
