--- a/infrastructure/logging/logstash/pipeline/logstash.conf
+++ b/infrastructure/logging/logstash/pipeline/logstash.conf
@@ -1,6 +1,6 @@
 input {
-	tcp {
-		port => 5000
+	beats {
+		port => 5044
 	}
 }
 
@@ -9,5 +9,8 @@ input {
 output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
+		manage_template => false
+		index => "%{[@metadata][beat]}-%{+YYYY.MM.dd}" 
+		document_type => "%{[@metadata][type]}" 
 	}
 }
