--- a/infrastructure/base-image/config/filebeat.yml
+++ b/infrastructure/base-image/config/filebeat.yml
@@ -52,3 +52,11 @@ filebeat.prospectors:
   # Note: After is the equivalent to previous and before is the equivalent to to next in Logstash
   #multiline.match: after
 
+  fields:
+    - app_type=${FOG_APP_TYPE}
+    - app_host=${FOG_APP_HOST}
+
+
+output.elasticsearch:
+  # Array of hosts to connect to.
+  hosts: ["192.168.2.100:49200"]
