--- a/infrastructure/base-image/Dockerfile
+++ b/infrastructure/base-image/Dockerfile
@@ -43,8 +43,9 @@ RUN \
 
 COPY docker-entrypoint.sh /
 RUN chmod +x docker-entrypoint.sh && mkdir -p /beat && \
-    echo "java -Dspring.profiles.active=docker -jar /usr/share/app.jar" > /usr/share/run_app.sh && \
+    echo "java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=50050 -Dspring.profiles.active=docker -jar /usr/share/app.jar" > /usr/share/run_app.sh && \
     chmod +x /usr/share/run_app.sh
+EXPOSE 50050
 ENTRYPOINT ["/docker-entrypoint.sh"]
 WORKDIR /
 
