--- a/platform-host-info/pom.xml
+++ b/platform-host-info/pom.xml
@@ -6,24 +6,21 @@
         <artifactId>platform-parent</artifactId>
         <groupId>at.sintrum.fog</groupId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath>..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>platform-client-core</artifactId>
+    <artifactId>platform-host-info</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-feign</artifactId>
+            <groupId>at.sintrum.fog</groupId>
+            <artifactId>platform-core</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <scope>provided</scope>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
     </dependencies>
 
 </project>
