--- a/applications/pom.xml
+++ b/applications/pom.xml
@@ -9,21 +9,11 @@
         <relativePath>..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
+    <modules>
+        <module>test-application</module>
+    </modules>
+    <artifactId>applications-parent</artifactId>
 
-    <artifactId>platform-client-core</artifactId>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-feign</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <scope>provided</scope>
-        </dependency>
-
-    </dependencies>
 
 </project>
