--- a/platform-application-core/pom.xml
+++ b/platform-application-core/pom.xml
@@ -6,16 +6,19 @@
         <artifactId>platform-parent</artifactId>
         <groupId>at.sintrum.fog</groupId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath>..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>platform-server-core</artifactId>
+    <artifactId>platform-application-core</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>at.sintrum.fog</groupId>
             <artifactId>platform-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>at.sintrum.fog</groupId>
+            <artifactId>deployment-manager-client</artifactId>
         </dependency>
         <dependency>
             <groupId>at.sintrum.fog</groupId>
