extend client core filter swagger listed endpoints start move app impl.

--- a/applications/test-application/src/main/resources/application.yml
+++ b/applications/test-application/src/main/resources/application.yml
@@ -15,3 +15,7 @@ eureka:
       defaultZone: ${EUREKA_SERVICE_URL:http://localhost:8761}/eureka/
 
 management.security.enabled: false
+endpoints.shutdown.enabled: true
+
+fog.app:
+  deploymentManagerUrl: ${FOG_BASE_URL:http://deployment-manager}
