--- a/deployment-manager/deployment-manager-server/src/main/resources/application.yml
+++ b/deployment-manager/deployment-manager-server/src/main/resources/application.yml
@@ -15,6 +15,9 @@ eureka:
       defaultZone: ${EUREKA_SERVICE_URL:http://localhost:8761}/eureka/
 
 management.security.enabled: false
+endpoints:
+  shutdown:
+    enabled: true
 
 fog.deploymentmanager.protectedContainers:
   - "portainer/portainer"
