--- a/infrastructure/cloud/docker-compose.yaml
+++ b/infrastructure/cloud/docker-compose.yaml
@@ -1,4 +1,5 @@
 docker-ui:
+  container_name: portainer
   image: portainer/portainer
   ports:
   - 49000:9000
@@ -7,6 +8,7 @@ docker-ui:
   - /var/run/docker.sock:/var/run/docker.sock
   restart: always
 registry-srv:
+  container_name: dockerregistry
   image: registry:2
   volumes:
   - ./certs:/certs
@@ -27,6 +29,7 @@ registry-srv:
     FORCE_SSL: 'true'
     REGISTRY_STORAGE_DELETE_ENABLED: "true"
 registry-ui:
+  container_name: dockerregistry_ui
   image: konradkleine/docker-registry-frontend:v2
   links:
   - registry-srv:registry-srv
@@ -40,6 +43,7 @@ registry-ui:
     ENV_REGISTRY_PROXY_FQDN: registry-srv
   restart: always
 lb:
+   container_name: dockerregistry_lb
    image: dockercloud/haproxy:1.6.2
    links:
      - registry-srv
