--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,21 @@
                 <version>1.3.0.RELEASE</version>
             </dependency>
 
+            <!--Model-Mapper-->
+            <dependency>
+                <groupId>org.modelmapper</groupId>
+                <artifactId>modelmapper</artifactId>
+                <version>0.7.8</version>
+            </dependency>
+
+            <!--JodaTime-->
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>2.9.9</version>
+            </dependency>
+
+
             <!--Platform-->
             <dependency>
                 <groupId>at.sintrum.fog</groupId>
