--- a/platform-application-core/pom.xml
+++ b/platform-application-core/pom.xml
@@ -22,6 +22,10 @@
         </dependency>
         <dependency>
             <groupId>at.sintrum.fog</groupId>
+            <artifactId>metadata-manager-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>at.sintrum.fog</groupId>
             <artifactId>platform-host-info</artifactId>
         </dependency>
 
