--- a/deployment-manager/deployment-manager-server/src/main/resources/application.yml
+++ b/deployment-manager/deployment-manager-server/src/main/resources/application.yml
@@ -19,14 +19,16 @@ endpoints:
   shutdown:
     enabled: true
 
-fog.deploymentmanager.protectedContainers:
-  - "portainer/portainer"
-  - "logging_elastichq"
-  - "logging_kibana"
-  - "logging_elasticsearch"
-  - "infrastructure_adminserver"
-  - "infrastructure_eurekaserver"
-  - "dockercloud/haproxy:1.6.2"
-  - "konradkleine/docker-registry-frontend:v2"
-  - "registry:2"
-  - "elasticsearch:5.3.0"
+fog.deploymentmanager:
+  registry: deb.hw.sintrum.at:5000
+  protectedContainers:
+    - "portainer/portainer"
+    - "logging_elastichq"
+    - "logging_kibana"
+    - "logging_elasticsearch"
+    - "infrastructure_adminserver"
+    - "infrastructure_eurekaserver"
+    - "dockercloud/haproxy:1.6.2"
+    - "konradkleine/docker-registry-frontend:v2"
+    - "registry:2"
+    - "elasticsearch:5.3.0"
