refactoring & add date (metadata)

--- a/metadata-manager/metadata-manager-api/pom.xml
+++ b/metadata-manager/metadata-manager-api/pom.xml
@@ -13,6 +13,13 @@
     <artifactId>metadata-manager-api</artifactId>
 
     <dependencies>
+
+        <dependency>
+            <groupId>at.sintrum.fog</groupId>
+            <artifactId>platform-core</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
