--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,17 @@
                 <version>2.9.9</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.fasterxml.jackson.jaxrs</groupId>
+                <artifactId>jackson-jaxrs-json-provider</artifactId>
+                <version>2.8.8</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-joda</artifactId>
+                <version>2.8.8</version>
+            </dependency>
+
 
             <!--Platform-->
             <dependency>
