impl deployment server moveApplication api

--- a/platform-client-core/pom.xml
+++ b/platform-client-core/pom.xml
@@ -24,6 +24,11 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
