--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,14 @@
                 <version>1.3.0.RELEASE</version>
             </dependency>
 
+            <!--Required for Feign Retryer-->
+            <dependency>
+                <groupId>javax.validation</groupId>
+                <artifactId>validation-api</artifactId>
+                <version>1.1.0.Final</version>
+            </dependency>
+
+
             <!--Model-Mapper-->
             <dependency>
                 <groupId>org.modelmapper</groupId>
