--- a/metadata-manager/metadata-manager-server/src/main/resources/application.yml
+++ b/metadata-manager/metadata-manager-server/src/main/resources/application.yml
@@ -6,18 +6,13 @@ eureka:
     leaseRenewalIntervalInSeconds: 10
     prefer-ip-address: true
     ip-address: ${EUREKA_CLIENT_IP:192.168.1.10}
+    non-secure-port: ${EUREKA_CLIENT_PORT:${server.port}}
     metadata-map:
       instanceId: ${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${server.port}}}
-
   client:
     registryFetchIntervalSeconds: 5
     serviceUrl:
       defaultZone: ${EUREKA_SERVICE_URL:http://localhost:8761}/eureka/
-
-management.security.enabled: false
-endpoints:
-  shutdown:
-    enabled: true
 
 redis:
   host: ${REDIS_HOST:localhost}
