--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>platform-application-core</module>
         <module>platform-host-info</module>
         <module>metadata-manager</module>
+        <module>platform-redis</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -149,6 +150,13 @@
                 <version>2.8.8</version>
             </dependency>
 
+            <!--Redisson-->
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson</artifactId>
+                <version>3.4.3</version>
+            </dependency>
+
 
             <!--Platform-->
             <dependency>
@@ -174,6 +182,11 @@
             <dependency>
                 <groupId>at.sintrum.fog</groupId>
                 <artifactId>platform-host-info</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>at.sintrum.fog</groupId>
+                <artifactId>platform-redis</artifactId>
                 <version>0.0.1-SNAPSHOT</version>
             </dependency>
             <dependency>
