restart for docker-compose containers add app housing (evolution)

--- a/deployment-manager/deployment-manager-server/src/main/resources/application.yml
+++ b/deployment-manager/deployment-manager-server/src/main/resources/application.yml
@@ -27,3 +27,5 @@ fog.deploymentmanager:
     - "konradkleine/docker-registry-frontend:v2"
     - "registry:2"
     - "elasticsearch:5.3.0"
+    - "tenstartups/redis-commander"
+    - "redis"
