--- a/platform-application-core/pom.xml
+++ b/platform-application-core/pom.xml
@@ -18,6 +18,10 @@
         </dependency>
         <dependency>
             <groupId>at.sintrum.fog</groupId>
+            <artifactId>application-housing-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>at.sintrum.fog</groupId>
             <artifactId>deployment-manager-client</artifactId>
         </dependency>
         <dependency>
