add application standby mode add upgrade application api

--- a/deployment-manager/deployment-manager-server/pom.xml
+++ b/deployment-manager/deployment-manager-server/pom.xml
@@ -53,6 +53,11 @@
             <artifactId>deployment-manager-client</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>at.sintrum.fog</groupId>
+            <artifactId>application-housing-client</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
