--- a/platform-client-core/pom.xml
+++ b/platform-client-core/pom.xml
@@ -14,6 +14,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>at.sintrum.fog</groupId>
+            <artifactId>platform-core</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-feign</artifactId>
         </dependency>
