--- a/pom.xml
+++ b/pom.xml
@@ -269,6 +269,7 @@
                 </executions>
                 <configuration>
                     <commitIdGenerationMode>flat</commitIdGenerationMode>
+                    <dateFormat>dd.MM.yyyy '@' HH:mm:ss z</dateFormat>
                     <gitDescribe>
                         <skip>true</skip>
                     </gitDescribe>
