add simulation master service improve app evolution (store metadata) add RequestAppController

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>metadata-manager</module>
         <module>platform-redis</module>
         <module>application-housing</module>
+        <module>simulation-master</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -221,6 +222,11 @@
             <dependency>
                 <groupId>at.sintrum.fog</groupId>
                 <artifactId>application-housing-client</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>at.sintrum.fog</groupId>
+                <artifactId>simulation-master-client</artifactId>
                 <version>0.0.1-SNAPSHOT</version>
             </dependency>
 
