--- a/platform-application-core/pom.xml
+++ b/platform-application-core/pom.xml
@@ -34,6 +34,11 @@
         </dependency>
 
         <dependency>
+            <groupId>at.sintrum.fog</groupId>
+            <artifactId>platform-redis</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
