replace spring data redis with redisson

--- a/metadata-manager/metadata-manager-server/pom.xml
+++ b/metadata-manager/metadata-manager-server/pom.xml
@@ -35,8 +35,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <groupId>at.sintrum.fog</groupId>
+            <artifactId>platform-redis</artifactId>
         </dependency>
 
         <dependency>
