--- a/platform-core/pom.xml
+++ b/platform-core/pom.xml
@@ -38,7 +38,18 @@
 
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-joda</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>at.sintrum.fog</groupId>
+            <artifactId>platform-test</artifactId>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
