--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,12 @@
                 <artifactId>jackson-datatype-joda</artifactId>
                 <version>2.8.8</version>
             </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jsr310</artifactId>
+                <version>2.8.8</version>
+            </dependency>
+
 
             <!--Redisson-->
             <dependency>
