--- a/applications/test-application/src/main/resources/application.yml
+++ b/applications/test-application/src/main/resources/application.yml
@@ -19,4 +19,4 @@ management.security.enabled: false
 endpoints.shutdown.enabled: true
 
 fog.app:
-  deploymentManagerUrl: ${FOG_BASE_URL:http://deployment-manager}
+  enable-simulation-mode: false
