--- a/simulation-master/simulation-master-server/pom.xml
+++ b/simulation-master/simulation-master-server/pom.xml
@@ -39,6 +39,27 @@
             <artifactId>simulation-master-api</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>at.sintrum.fog</groupId>
+            <artifactId>deployment-manager-client</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>at.sintrum.fog</groupId>
+            <artifactId>metadata-manager-client</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>at.sintrum.fog</groupId>
+            <artifactId>application-housing-client</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>at.sintrum.fog</groupId>
+            <artifactId>test-application-client</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
