--- a/platform-application-core/pom.xml
+++ b/platform-application-core/pom.xml
@@ -57,6 +57,13 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka</artifactId>
         </dependency>
+
+
+        <!--Simulation only-->
+        <dependency>
+            <groupId>at.sintrum.fog</groupId>
+            <artifactId>simulation-master-client</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
