--- a/pom.xml
+++ b/pom.xml
@@ -244,6 +244,12 @@
                 <version>0.0.1-SNAPSHOT</version>
             </dependency>
 
+            <dependency>
+                <groupId>at.sintrum.fog</groupId>
+                <artifactId>test-application-client</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
