--- a/simulation-master/simulation-master-api/pom.xml
+++ b/simulation-master/simulation-master-api/pom.xml
@@ -12,5 +12,17 @@
 
     <artifactId>simulation-master-api</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>at.sintrum.fog</groupId>
+            <artifactId>platform-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
 </project>
