--- a/simulation-master/simulation-master-server/src/main/resources/application.yml
+++ b/simulation-master/simulation-master-server/src/main/resources/application.yml
@@ -9,6 +9,7 @@ eureka:
     non-secure-port: ${EUREKA_CLIENT_PORT:${server.port}}
     metadata-map:
       instanceId: ${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${server.port}}}
+      profiles: ${spring.profiles.active}
   client:
     registryFetchIntervalSeconds: 5
     serviceUrl:
