basic recovery if fog cell is still available

--- a/application-housing/application-housing-server/pom.xml
+++ b/application-housing/application-housing-server/pom.xml
@@ -20,6 +20,11 @@
 
         <dependency>
             <groupId>at.sintrum.fog</groupId>
+            <artifactId>platform-application-client</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>at.sintrum.fog</groupId>
             <artifactId>platform-docker</artifactId>
         </dependency>
 
