basic cloud recovery

--- a/application-housing/application-housing-server/src/main/resources/application.yml
+++ b/application-housing/application-housing-server/src/main/resources/application.yml
@@ -13,3 +13,8 @@ eureka:
     registryFetchIntervalSeconds: 5
     serviceUrl:
       defaultZone: ${EUREKA_SERVICE_URL:http://localhost:8761}/eureka/
+
+fog.apphousing:
+  appStateMetadataGraceTimeout: 60
+  appRecoveryWaitTime: 60
+  appHeartbeatTimeout: 60
