--- a/application-housing/application-housing-server/src/main/resources/application.yml
+++ b/application-housing/application-housing-server/src/main/resources/application.yml
@@ -15,6 +15,7 @@ eureka:
       defaultZone: ${EUREKA_SERVICE_URL:http://localhost:8761}/eureka/
 
 fog.apphousing:
+  enableRecovery: false
   appStateMetadataGraceTimeout: 60
   appRecoveryWaitTime: 60
   appHeartbeatTimeout: 60
