--- a/deployment-manager/deployment-manager-api/pom.xml
+++ b/deployment-manager/deployment-manager-api/pom.xml
@@ -14,6 +14,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>at.sintrum.fog</groupId>
+            <artifactId>platform-core</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <scope>provided</scope>
