add fogcellstate service (simulation controlled service connectivity)

--- a/application-housing/application-housing-server/pom.xml
+++ b/application-housing/application-housing-server/pom.xml
@@ -57,6 +57,10 @@
             <groupId>at.sintrum.fog</groupId>
             <artifactId>application-housing-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>at.sintrum.fog</groupId>
+            <artifactId>simulation-master-client</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
