--- a/platform-server-core/pom.xml
+++ b/platform-server-core/pom.xml
@@ -14,6 +14,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjtools</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>at.sintrum.fog</groupId>
             <artifactId>platform-core</artifactId>
         </dependency>
@@ -40,6 +45,12 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>at.sintrum.fog</groupId>
+            <artifactId>simulation-master-client</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
