--- a/deployment-manager/deployment-manager-server/src/main/resources/application.yml
+++ b/deployment-manager/deployment-manager-server/src/main/resources/application.yml
@@ -16,7 +16,7 @@ eureka:
       defaultZone: ${EUREKA_SERVICE_URL:http://localhost:8761}/eureka/
 
 fog.deploymentmanager:
-  registry: deb.hw.sintrum.at:5000
+  registry: ${DOCKER_REGISTRY:deb.hw.sintrum.at}:5000
   protectedContainers:
     - "portainer/portainer"
     - "logging_elastichq"
