centralized app request handling

--- a/metadata-manager/metadata-manager-server/pom.xml
+++ b/metadata-manager/metadata-manager-server/pom.xml
@@ -44,6 +44,12 @@
             <artifactId>modelmapper</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>at.sintrum.fog</groupId>
+            <artifactId>platform-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
