upgrade docker images

--- a/infrastructure/base-image/Dockerfile
+++ b/infrastructure/base-image/Dockerfile
@@ -2,15 +2,13 @@ FROM openjdk:8
 MAINTAINER Michael Mittermayr
 
 # Install Filebeat
-ENV FILEBEAT_VERSION=5.4.0 \
-    FILEBEAT_SHA1=545fbb229c958f2379b17efe3825bf0c30e3039b
+ENV FILEBEAT_VERSION=5.6.3
 
 RUN set -x && \
   apt-get update && \
   apt-get install -y wget && \
   wget https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-${FILEBEAT_VERSION}-linux-x86_64.tar.gz -O /opt/filebeat.tar.gz && \
   cd /opt && \
-  echo "${FILEBEAT_SHA1}  filebeat.tar.gz" | sha1sum -c - && \
   tar xzvf filebeat.tar.gz && \
   cd filebeat-* && \
   cp filebeat /bin && \
